[workspace]
resolver = "2"
members = [
  "crates/cantrip-core",
  "crates/cantrip-bytecode",
  "crates/cantrip-jit",
  "crates/cantrip-runtime",
  "apps/cantrip-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/StormbringerDev/cantrip"
authors = ["StormbringerDev"]

[workspace.dependencies]
thiserror = "2.0.19"
anyhow = "1.0.104"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"

# Will be used later
# cranelift-codegen = "0.134.1"
# cranelift-frontend = "0.134.1"
# cranelift-module = "0.134.1"
# cranelift-jit = "0.134.1"
