[package]
name = "cantrip-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The Cantrip command-line interface (REPL + script runner)"

[[bin]]
name = "cantrip"
path = "src/main.rs"

[dependencies]
cantrip-runtime = { path = "../../crates/cantrip-runtime" }
cantrip-core = { path = "../../crates/cantrip-core" }
anyhow = { workspace = true }
clap = { version = "4.6.3", features = ["derive"] }
