[package]
name = "quill-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The Quill command-line interface (REPL + script runner)"

[[bin]]
name = "quill"
path = "src/main.rs"

[dependencies]
quill-runtime = { path = "../../crates/quill-runtime" }
quill-core = { path = "../../crates/quill-core" }
anyhow = { workspace = true }
clap = { version = "4.6.3", features = ["derive"] }
