[package]
name = "cantrip-jit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JIT compilation backend for Cantrip (Cranelift planned)"

[dependencies]
cantrip-core = { path = "../cantrip-core" }
cantrip-bytecode = { path = "../cantrip-bytecode" }
thiserror = { workspace = true }

# Uncomment when ready for real JIT:
# cranelift-codegen = { workspace = true }
# cranelift-frontend = { workspace = true }
# cranelift-module = { workspace = true }
# cranelift-jit = { workspace = true }
