[package]
name = "cantrip-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedding API and standard library for Cantrip"

[dependencies]
cantrip-core = { path = "../cantrip-core" }
cantrip-bytecode = { path = "../cantrip-bytecode" }
thiserror = { workspace = true }
anyhow = { workspace = true }
