[package]
name = "quill-jit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JIT compilation backend for Quill (Cranelift planned)"

[dependencies]
quill-core = { path = "../quill-core" }
quill-bytecode = { path = "../quill-bytecode" }
thiserror = { workspace = true }

# Uncomment when ready for real JIT:
# cranelift-codegen = { workspace = true }
# cranelift-frontend = { workspace = true }
# cranelift-module = { workspace = true }
# cranelift-jit = { workspace = true }
